# aoc2024

./: .gitignore
01dist/prog/: Cargo.toml
2023/day02/: Cargo.toml
2023/day03/: Cargo.toml
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml
2023/day06/: Cargo.toml
2023/day07/: Cargo.toml
2023/day08/: Cargo.toml
2023/day09/: Cargo.toml
2023/day10/: Cargo.toml
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2023/day13/: Cargo.toml  input_sample2.txt  start.txt  times.txt
2023/day14/: Cargo.toml  times.txt
2023/day15/: Cargo.toml
2023/day16/: Cargo.toml  my_output.txt  other_output.txt  someone_else.py
2024/01dist/: Cargo.toml
2024/day02reports/: Cargo.toml
2024/day03corruptedmul/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml  input_sample.txt
2024/day06/: Cargo.toml
2024/day07/: Cargo.toml
2024/day08/: Cargo.toml
2024/day09/: Cargo.toml
2024/day10/: Cargo.toml
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml
2024/day13/src/: main.rs
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day20/: Cargo.toml
day02reports/: Cargo.toml
day03corruptedmul/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml  input_sample.txt
day06/: Cargo.toml
day07/: Cargo.toml
day08/: Cargo.toml
day09/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day14/: Cargo.toml  input_sample_one.txt
day16/: Cargo.toml  log
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
(+61 files in other folders)
