[package]
name = "day13"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
arrayvec = "0.7.6"
bit-set = "0.8.0"
derive_more = { version = "1.0.0", features = ["full"] }
is_sorted = "0.1.1"
itertools = "0.13.0"
justerror = "1.1.0"
nalgebra = "0.33.2"
num = "0.4.3"
petgraph = "0.6.5"
rational = { version = "1.6.0", features = ["num-traits"] }
scan_fmt = "0.2.6"
thiserror = "2.0.6"
